# ext-lb-rs

./: Cargo.toml
src/: main.rs
src/cli/: interface.rs
src/core/: engine.rs  mod.rs  templates.rs  watcher.rs
templates/: haproxy.conf
