[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
handlebars = "4.3.6"
k8s-openapi = { version = "0.16.0", features = ["v1_24"] }
kube = { version = "0.77.0", features = ["runtime", "derive"] }
mustache = "0.9.0"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
clippy = "0.0.302"
